// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tomo interface add 1`] = `
"
 [36mAdd automated [1maccessibility[22m testing[39m

 [36m[1m→[22m[39m [36m[1ma11y[22m[39m
   babel
   browsersync
   cypress
   electron
   esdoc
   eslint
   jest
   makefile
   marionette
   parcel
   postcss
   react
   reason
   rollup
   webpack
"
`;

exports[`tomo interface add 2`] = `
"
 [36mUse next generation JavaScript, [1mtoday![22m[39m

   a11y
 [36m[1m→[22m[39m [36m[1mbabel[22m[39m
   browsersync
   cypress
   electron
   esdoc
   eslint
   jest
   makefile
   marionette
   parcel
   postcss
   react
   reason
   rollup
   webpack
"
`;

exports[`tomo interface remove 1`] = `
"
 [1m[33mCAUTION:[39m[22m tomo shall [1m[31mremove[39m[22m that which tomo would have [1m[32madded[39m[22m

 [36m[1m→[22m[39m [36m[1ma11y[22m[39m
   browsersync
   cypress
   parcel
   postcss
   reason
   rollup
   webpack
"
`;

exports[`tomo interface remove 2`] = `
"
 [1m[33mCAUTION:[39m[22m tomo shall [1m[31mremove[39m[22m that which tomo would have [1m[32madded[39m[22m

   a11y
 [36m[1m→[22m[39m [36m[1mbrowsersync[22m[39m
   cypress
   parcel
   postcss
   reason
   rollup
   webpack
"
`;
